# simple-network-public

./: Cargo.toml  MANUAL_TESTING.md  README.md  SPECS.md  build.rs  ci.sh
cpp/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE_DECISIONS.md  INTEGRATION-REQUEST-quantum.md  pqc-secure-channel.md
examples/: rust_demo.rs  simple_ui_demo.rs
go/: demo  go.mod  main.go
proofs/lean4/: Crdt.lean  Dht.lean  Gossip.lean  Raft.lean  Swim.lean  TwoPC.lean  VectorClock.lean
proofs/tla/: Crdt.tla  Dht.tla  Gossip.tla  Raft.tla  Swim.tla  TwoPC.tla  VectorClock.tla
scripts/: build-and-test-all.sh
src/: lib.rs
src/algorithms/: crdt.rs  dht.rs  gossip.rs  mod.rs  raft.rs  swim.rs  twopc.rs  vector_clock.rs
src/ffi/: cxx_bridge.rs  go_bridge.rs  mod.rs
src/patterns/: gen_server.rs  gen_statem.rs  mod.rs  net_kernel.rs  pipeline.rs  pubsub.rs  router_dealer.rs
src/security/: mod.rs  pairing.rs  pqc.rs  simple_secrets.rs  traits.rs
src/transport/: cluster.rs  i2p.rs  mod.rs  port_forward.rs  quic.rs  tcp.rs  tls.rs  tor.rs  traits.rs  udp.rs
src/transport/middleware/: throttle.rs
tests/: integration.rs
