[package]
name = "simple_network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
cxx = { version = "1.0.194", optional = true }
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
# PQC secure channel (feature `pqc`): hybrid ML-KEM + XChaCha20 + ML-DSA via
# rust-secure-memory. Off by default so the base lib stays lean.
secure-memory = { path = "../rust-secure-memory-public/crates/secure-memory", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
zeroize = { version = "1", optional = true }
arti-client = { version = "0.43.0", default-features = false, features = ["tokio", "rustls", "onion-service-service"], optional = true }
tor-hsservice = { version = "0.43.0", optional = true }
tor-cell = { version = "0.43.0", optional = true }
tor-rtcompat = { version = "0.43.0", optional = true }
tor-proto = { version = "0.43.0", optional = true }
safelog = { version = "0.8.2", optional = true }
futures = { version = "0.3", optional = true }

[features]
# `ffi` (C++/Go bridges) is on by default for existing consumers; pure-Rust
# users can `default-features = false` to skip the C++ toolchain.
default = ["ffi"]
ffi = ["dep:cxx"]
pqc = ["dep:secure-memory", "dep:serde", "dep:serde_json", "dep:zeroize"]
# Tor onion carrier (feature `tor`): client connect + onion-service hosting via
# arti. Heavy dependency tree and needs a live Tor network to exercise, so it
# is off by default and excluded from the lean build.
tor = ["dep:arti-client", "dep:tor-hsservice", "dep:tor-cell", "dep:tor-rtcompat", "dep:tor-proto", "dep:safelog", "dep:futures"]
# I2P carrier (feature `i2p`): client connect + inbound accept by speaking SAM
# v3 to a locally running router (i2pd / Java I2P, default 127.0.0.1:7656). No
# pure-Rust router exists, so this needs a live router and is off by default; it
# pulls in no extra crates (SAM is spoken directly over tokio sockets).
i2p = []

[build-dependencies]
cxx-build = "1.0.194"
